--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "do-i-understand-webpack-dev-middleware",
   "packageManager": "yarn@3.2.2",
+  "scripts": {
+    "dev": "tsnd ./server/server.ts"
+  },
   "devDependencies": {
+    "@types/hapi__boom": "^9.0.1",
+    "@types/hapi__hapi": "^20",
+    "@types/hapi__inert": "^5.2.3",
     "@types/node": "^18.7.8",
     "@types/rimraf": "^3",
     "@yarnpkg/pnpify": "^4.0.0-rc.14",
@@ -10,5 +16,11 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "@hapi/boom": "^10.0.0",
+    "@hapi/hapi": "^20.2.2",
+    "@hapi/inert": "^7.0.0",
+    "blipp": "^4.0.2"
   }
 }
