--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "do-i-understand-webpack-dev-middleware",
   "packageManager": "yarn@3.2.2",
   "scripts": {
+    "build": "cross-env NODE_ENV=production webpack; tsc",
+    "start": "cross-env NODE_ENV=production node ./dist/server/server.js",
     "dev": "cross-env NODE_ENV=development tsnd ./server/server.ts"
   },
   "devDependencies": {
@@ -20,6 +22,7 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
     "webpack-dev-middleware": "^5.3.3",
     "webpack-hot-middleware": "^2.25.2",
     "webpack-merge": "^5.8.0"
