--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@types/hapi__inert": "^5.2.3",
     "@types/node": "^18.7.8",
     "@types/rimraf": "^3",
+    "@types/webpack-env": "^1.18.0",
     "@types/webpack-hot-middleware": "^2",
     "@yarnpkg/pnpify": "^4.0.0-rc.14",
     "cross-env": "^7.0.3",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "rimraf": "^3.0.2",
+    "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4",
