--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/webpack-hot-middleware": "^2",
     "@yarnpkg/pnpify": "^4.0.0-rc.14",
     "cross-env": "^7.0.3",
+    "elm-hot-webpack-loader": "^1.1.8",
+    "elm-webpack-loader": "^8.0.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "rimraf": "^3.0.2",
