--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "clean": "rimraf ./dist"
   },
   "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@types/hapi__boom": "^9.0.1",
     "@types/hapi__hapi": "^20",
     "@types/hapi__inert": "^5.2.3",
     "@types/node": "^18.7.8",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/rimraf": "^3",
     "@types/webpack-env": "^1.18.0",
     "@types/webpack-hot-middleware": "^2",
@@ -23,6 +26,7 @@
     "elm-webpack-loader": "^8.0.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
+    "react-refresh": "^0.14.0",
     "rimraf": "^3.0.2",
     "sass": "^1.54.5",
     "sass-loader": "^13.0.2",
@@ -30,6 +34,7 @@
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
+    "type-fest": "^2.18.1",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
@@ -41,6 +46,8 @@
     "@hapi/boom": "^10.0.0",
     "@hapi/hapi": "^20.2.2",
     "@hapi/inert": "^7.0.0",
-    "blipp": "^4.0.2"
+    "blipp": "^4.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
